Added flexbox containers + fixed id overlaps. Need to fix multiple line drag

--- a/create.html
+++ b/create.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
-
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="styles.css">
+            <script src="jquery-3.7.1.min.js"></script>
+            <script src="/scripts.js" defer></script>
         </head>
         <body>
-
+            <h3 class="title"> Majors:  </h3>
+            <nav class="majors-navbar">
+                <a href="main.html"></a>
+            </nav>
         </body>
     </html>
