--- a/main.html
+++ b/main.html
@@ -14,20 +14,33 @@
                 <div class="class-container">
                         <div class="class-div" id="MATH181" draggable="true" ondragstart="drag(event)"><p>MATH181<br>Calculus I</p></div>
                         <div class="class-div" id="CSCI141" draggable="true" ondragstart="drag(event)"><p>CSCI141<br>Computer Science I</p></div>
-                        <div class="class-div" id="WRITY1" draggable="true" ondragstart="drag(event)"><p>1st Year Writing<br><input type="text" class="form">
-                        </p></div>
                         <div class="class-div" id="WRITY1" draggable="true" ondragstart="drag(event)"><p>1st Year Writing<br><input type="text" class="form" placeholder="UWRT150">
                         </p></div>
-                        <div class="class-div" id="GEART" draggable="true" ondragstart="drag(event)"><p>GE: Artistic Perspective<br><input type="text" class="form">
+                        <div class="class-div" id="GEGLOBA" draggable="true" ondragstart="drag(event)"><p>GE: Global Perspective<br><input type="text" class="form" placeholder="HIST150">
                         </p></div>
-                        <div class="class-div" id="YOPS10" draggable="true" ondragstart="drag(event)"><p>RIT 365<br>First Year Programs</p></div>
+                        <div class="class-div" id="GEARTIS" draggable="true" ondragstart="drag(event)"><p>GE: Artistic Perspective<br><input type="text" class="form" placeholder="DHSS101">
+                        </p></div>
+                        <div class="class-div" id="YOPS010" draggable="true" ondragstart="drag(event)"><p>RIT 365<br>First Year Programs</p></div>
                 </div>
             </div>
             <div class="semester" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h3 id="year_title">Second Semester, First Year</h3>
+                <div class="class-container">
+                        <div class="class-div" id="MATH182" draggable="true" ondragstart="drag(event)"><p>MATH181<br>Calculus II</p></div>
+                        <div class="class-div" id="CSCI142" draggable="true" ondragstart="drag(event)"><p>CSCI142<br>Computer Science II</p></div>
+                        <div class="class-div" id="MATH190" draggable="true" ondragstart="drag(event)"><p>MATH190<br>Discrete Mathematics for Computing</p></div>
+                        <div class="class-div" id="GEETHIC" draggable="true" ondragstart="drag(event)"><p>GE: Ethical Perspective<br><input type="text" class="form" placeholder="CRIM110">
+                        </p></div>
+                        <div class="class-div" id="GESOCIA" draggable="true" ondragstart="drag(event)"><p>GE: Social Perspective<br><input type="text" class="form" placeholder="ECON101">
+                        </p></div>
+                        <div class="class-div" id="WELLACT1" draggable="true" ondragstart="drag(event)"><p>Wellness Activity<br><input type="text" class="form" placeholder="WFIT101">
+                        </p></div>
+                </div>
             </div>
             <div class="semester" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h3 id="year_title">Second Semester, First Year</h3>
+                <div class="class-container">
+                </div>
             </div>
             <div class="semester" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h3 id="year_title">First Semester, Second Year</h3>
