added couple classes

--- a/main.html
+++ b/main.html
@@ -40,10 +40,28 @@
             <div class="semester" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h3 id="year_title">Second Semester, First Year</h3>
                 <div class="class-container">
+                    <div class="class-div" id="CSCI243" draggable="true" ondragstart="drag(event)"><p>CSCI243<br>Mechanics of Programming</p></div>
+                    <div class="class-div" id="CSCI262" draggable="true" ondragstart="drag(event)"><p>CSCI262<br>Intro to Computer Science Theory</p></div>
+                    <div class="class-div" id="MATH251" draggable="true" ondragstart="drag(event)"><p>MATH251<br>Probability and Statistics</p></div>
+                    <div class="class-div" id="LABSCI1" draggable="true" ondragstart="drag(event)"><p>Lab Science 1<br><input type="text" class="form" placeholder="BIO101">                        </p></div>
+                    <div class="class-div" id="GEELECT" draggable="true" ondragstart="drag(event)"><p>Gen Ed Elective<br><input type="text" class="form" placeholder="">
+                    </p></div>
+                    <div class="class-div" id="CSCI099" draggable="true" ondragstart="drag(event)"><p>CSCI 99<br>Co-op Seminar</p></div>
                 </div>
             </div>
             <div class="semester" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h3 id="year_title">First Semester, Second Year</h3>
+                <div class="class-container">
+                    <div class="class-div" id="CSCI261" draggable="true" ondragstart="drag(event)"><p>CSCI261<br>Analysis of Algorithms</p></div>
+                    <div class="class-div" id="SWEN261" draggable="true" ondragstart="drag(event)"><p>SWEN261<br>Intro to Software Engineering</p></div>
+                    <div class="class-div" id="" draggable="true" ondragstart="drag(event)"><p>MATH190<br>Discrete Mathematics for Computing</p></div>
+                    <div class="class-div" id="GEETHIC" draggable="true" ondragstart="drag(event)"><p>GE: Ethical Perspective<br><input type="text" class="form" placeholder="CRIM110">
+                        </p></div>
+                    <div class="class-div" id="GESOCIA" draggable="true" ondragstart="drag(event)"><p>GE: Social Perspective<br><input type="text" class="form" placeholder="ECON101">
+                        </p></div>
+                    <div class="class-div" id="WELLACT1" draggable="true" ondragstart="drag(event)"><p>Wellness Activity<br><input type="text" class="form" placeholder="WFIT101">
+                        </p></div>
+                </div>
             </div>
             <div class="semester" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h3 id="year_title">Second Semester, Second Year</h3>
